--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "reveal.js",
-  "version": "2.6.2",
-  "description": "The HTML Presentation Framework",
-  "homepage": "http://lab.hakim.se/reveal-js",
-  "subdomain": "revealjs",
+  "name": "andyet-pres-template",
+  "version": "1.0.0",
   "scripts": {
     "test": "grunt test",
-    "start": ""
-  },
-  "author": {
-    "name": "Hakim El Hattab",
-    "email": "hakim.elhattab@gmail.com",
-    "web": "http://hakim.se"
+    "start": "./node_modules/.bin/grunt serve"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": ""
   },
   "engines": {
-    "node": "~0.8.0"
+    "node": "~0.10.0"
   },
   "dependencies": {
-    "underscore": "~1.5.1",
     "express": "~2.5.9",
+    "grunt-cli": "^0.1.13",
     "mustache": "~0.7.2",
-    "socket.io": "~0.9.13"
+    "socket.io": "~0.9.13",
+    "underscore": "~1.5.1"
   },
   "devDependencies": {
     "grunt-contrib-qunit": "~0.2.2",
@@ -38,9 +31,5 @@
     "grunt": "~0.4.0"
   },
   "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/hakimel/reveal.js/blob/master/LICENSE"
-    }
   ]
 }
